--- a/index.html
+++ b/index.html
@@ -57,9 +57,7 @@
                             </header>
                             <div id = "center" class="inner">
                                 <section>
-                                    <h6 style="margin:0">(among other things)</h6>
-                                    <h2 style="margin:0">Security Researcher</h2>
-                                    <h2 style="font-family:'Droid Sans';">I break things</h2>
+                                    <h2 style="margin:0">Software Developer</h2>
                                     <!--What fun is the world if you don't try new things. . I try to make boring things interesting.-->
                                     <!--<p style="margin:0">I try to learn anything I can; nothing is useless</p>
                                     <p style="margin:0">I make things work not as intended</p>-->
