add knotter page

--- a/knotter.html
+++ b/knotter.html
@@ -33,28 +33,24 @@
                         </div>
                     </header>
 
-                <!-- Main -->
-                    <div id="main">
-                        <div class="inner">
-                            <h1>Under Construction :)</h1>
-                            <p></p>
+                    <!-- Main -->
+                        <div id="main">
+                            <div class="inner">
+                                <h1>Knotter</h1>
+                                <p>A few years ago I had realized how many different financial account I would need to log into in order to check my financial standing. During my free time I decided to take a shot at finding a solution to this by bringing all of my financial account data into one place.
+                                </p>
+                                <p>
+                                To accomplish this I began researching different API's that were able to link into many difference financial institutions. The best solution that I found was the <a href-"https://plaid.com/">Plaid</a> framework. After deciding on the framework, I built a web application that would allow to get all of the data aggeregated into one location.
+                                </p>
+                                <p>
+                                I created a web application using Node.js, a database to store user's credentials, accounts, and data using Mongo DB, and a cache to handle logged in users as well as a non persisting way to display their financial data using Redis.
+                                By bringing this all together I was able to create a viable product that aggregated one's financial data into one convinient location using a modern stack of technology, learning and building each system from scratch.
+                                </p>
+                                <!--Breakdown the code above into its functions and segments-->
 
-
-                            <pre><code>Steps:  20078532.0
-Miles:  10039.266
-Exercise Time:  28488.0
-Average Heartbeat:  75.198038595
-Flights Climbed:  191059.558
-Active Calories Burned(kcal):  191059.558
-Basal calories burned (kcal):  0
-Distance walking running (mi):  9352.63668092
-Stand Hours:  6860</code></pre>
-
-
-                            <p></p>
-                            <!--Breakdown the code above into its functions and segments-->
-
-                            <p></p>
+                                <div id="center">
+                                    <p></br>The source code can be found <a href='https://github.com/ehlewis/knotter'>here</a></p>
+                                </div>
 
                 <!-- Footer -->
                 <footer id="footer">
