--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             <header>
                                 <div id="center">
                                     <h1>Evan Lewis</h1>
-                                    <p style="margin:0">Hoboken, NJ</p>
+                                    <p style="margin:0">Boulder, CO</p>
                                     </br>
                                 </div>
                             </header>
