--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;500&display=swap" rel="stylesheet"> 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -30,11 +30,29 @@
 </head>
 
 <body>
+  
+  <!-- ======= Header ======= -->
+  <header id="header">
+    <div class="d-flex flex-column">
 
+      <div class="profile">
+        <h1 class="text-light"><a href="index.html">Evan Lewis</a></h1>
+        <p>Application Security Engineer </p>
+      </div>
+
+      <nav id="navbar" class="nav-menu navbar">
+        <ul>
+          <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-chevron-right"></i> <span>Home</span></a></li>
+          <li><a href="#about" class="nav-link scrollto"><i class="bx bx-chevron-right"></i> <span>About</span></a></li>
+          <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-chevron-right"></i> <span></span>Work</span></a></li>
+          <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-chevron-right"></i> <span>CV</span></a></li>
+        </ul>
+      </nav>
+    </div>
+  </header><!--End Header -->
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
-      <h1>Evan Lewis</h1>
       <p>I'm a <span class="typed" data-typed-items="builder, pentester, developer, problem solver, adventurer, photographer"></span></p>
     </div>
   </section><!-- End Hero -->
