--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;500&display=swap" rel="stylesheet"> 
-  <!-- Vendor CSS Files -->
+   <!-- Vendor CSS Files -->
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
@@ -31,7 +31,7 @@
 
 <body>
   
-  <!-- ======= Header ======= -->
+  <!-- ======= Header ======= -->`
   <header id="header">
     <div class="d-flex flex-column">
 
@@ -44,7 +44,7 @@
         <ul>
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-chevron-right"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-chevron-right"></i> <span>About</span></a></li>
-          <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-chevron-right"></i> <span></span>Work</span></a></li>
+          <!-- <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-chevron-right"></i> <span></span>Work</span></a></li> -->
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-chevron-right"></i> <span>CV</span></a></li>
         </ul>
       </nav>
@@ -72,12 +72,15 @@
           <div class="col-lg-12 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Application Security Specialist &amp; Software Developer.</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Breaker of things
             </p>
             <p>
                 Evan Lewis is a seasoned Application Security Architect with a wealth of expertise in protecting digital systems from cyber threats and malicious attacks. 
+            </p>
+            <p>
                 With a meticulous approach, background in secure software development, and a strong command of industry best practices, Evan excels in designing and implementing robust security measures for applications. 
+            </p>
+            <p>
                 Evan's passion for staying ahead of emerging risks, his ability to analyze complex systems, identify vulnerabilities, and devise effective mitigation strategies, coupled with his strong communication skills makes him a valuable asset in safeguarding sensitive data and ensuring the integrity of software ecosystems.
             </p>
           </div>
@@ -86,21 +89,26 @@
       </div>
     </section><!-- End About Section -->
     <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio section-bg">
+    <!-- <section id="portfolio" class="portfolio section-bg">
       <div class="container">
 
         <div class="section-title">
           <h2>Work</h2>
-          <p>I take photos</p>
-          <p>And write articles</p>
+          <p>I take photos and make things behave badly</p>
         </div>
         <div class="row" data-aos="fade-up">
-          <h3 class="resume-title">Download Resume</h3>
-          <p>Blah Blah download here</p>
+          <h4 class="resume-title">Photos</h3>
+          <a href=""#"">Gallery</a>
+        </div>
+        <div></br></div>
+        <div class="row" data-aos="fade-up">
+          <h4 class="resume-title">Making things behave badly</h3>
+          <a href="/resume.pdf">Resume</a>
         </div>
 
       </div>
-    </section><!-- End Portfolio Section -->
+    </section> -->
+    <!-- End Portfolio Section -->
 
     <!-- ======= Resume Section ======= -->
     <section id="resume" class="resume">
@@ -149,19 +157,29 @@
           <div class="col-lg-12" data-aos="fade-up">
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Bachelor's of Computer Science</h4>
+              <h4>Bachelor of Science with Honor in Computer Science</h4>
               <h5>2016 - 2020</h5>
               <p><em>Stevens Institute of Technology, Hoboken, NJ</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <p>GPA: 3.3</p>
+              <p><a href="https://cediploma.stevens.edu/validation/">View diploma</a></p>
+              <p>Credential ID CeDiD: 20BLAQR9EFSY and Name: EV</p>
             </div>
           </div>
           <div class="col-lg-12" data-aos="fade-up">
             <h3 class="resume-title">Certifications</h3>
             <div class="resume-item">
-              <h4>GIAC CIH</h4>
+              <h4>GIAC Certified Incident Handler (GCIH)</h4>
               <h5>2022</h5>
               <p><em>GIAC</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <p><a href="https://www.credly.com/badges/f9034f49-9470-4405-bac0-9ea279e09e92">View credential</a></p>
+              <p>The GIAC Incident Handler (GCIH) certification validates a practitioner's ability to detect, respond, and resolve computer security incidents using a wide range of essential security skills. GCIH certification holders have the knowledge needed to manage security incidents by understanding common attack techniques, vectors and tools, as well as defend against and respond to such attacks when they occur.</a></p>
+            </div>
+            <div class="resume-item">
+              <h4>GIAC Advisory Board Member</h4>
+              <h5>2022</h5>
+              <p><em>GIAC</em></p>
+              <p><a href="https://www.credly.com/badges/e9974fb9-4408-48c6-8e2f-dea32a212437">View credential</a></p>
+              <p>The GIAC Advisory Board is an invitation only, email-based forum where IT Security professionals can exchange ideas and advice. Invitations are extended to GIAC certified professionals who demonstrate exemplary performance on GIAC exams. Members are often consulted as subject-matter experts for content-related issues in various GIAC program needs.</a></p>
             </div>
           </div>
         </div>
