--- a/index.html
+++ b/index.html
@@ -117,7 +117,10 @@
         <div class="section-title">
           <h2>CV</h2>
         </div>
-
+        <div class="download">
+          <i class="bi bi-file-text"></i>
+          <h4><a href="/Lewis_Evan.pdf">Resume</button></a></h4>
+        </div>
         <div class="row">
           <div class="col-lg-12" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
