--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
   
   <!-- ======= Header ======= -->`
   <header id="header">
-    <div class="d-flex flex-column">
+    <div class="d-flex flex-column" style="padding: 10%;">
 
       <div class="profile">
         <h1 class="text-light"><a href="index.html">Evan Lewis</a></h1>
-        <p>Application Security Engineer </p>
+        <p style="font-size: 20px;">Application Security Engineer </p>
       </div>
 
       <nav id="navbar" class="nav-menu navbar">
@@ -50,12 +50,6 @@
       </nav>
     </div>
   </header><!--End Header -->
-  <!-- ======= Hero Section ======= -->
-  <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
-    <div class="hero-container" data-aos="fade-in">
-      <p>I'm a <span class="typed" data-typed-items="builder, pentester, developer, problem solver, adventurer, photographer"></span></p>
-    </div>
-  </section><!-- End Hero -->
 
   <main id="main">
 
@@ -122,7 +116,7 @@
           <h4><a href="/Lewis_Evan.pdf">Resume</button></a></h4>
         </div>
         <div class="row">
-          <div class="col-lg-12" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-12">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4>Application Security Engineer</h4>
@@ -157,7 +151,7 @@
               </ul>
             </div>
           </div>
-          <div class="col-lg-12" data-aos="fade-up">
+          <div>
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>Bachelor of Science with Honor in Computer Science</h4>
@@ -168,7 +162,7 @@
               <p>Credential ID CeDiD: 20BLAQR9EFSY and Name: EV</p>
             </div>
           </div>
-          <div class="col-lg-12" data-aos="fade-up">
+          <div>
             <h3 class="resume-title">Certifications</h3>
             <div class="resume-item">
               <h4>GIAC Certified Incident Handler (GCIH)</h4>
