--- a/index.html
+++ b/index.html
@@ -42,10 +42,12 @@
 
       <nav id="navbar" class="nav-menu navbar">
         <ul>
-          <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-chevron-right"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-chevron-right"></i> <span>About</span></a></li>
           <!-- <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-chevron-right"></i> <span></span>Work</span></a></li> -->
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-chevron-right"></i> <span>CV</span></a></li>
+          <li><a href="#certs" class="nav-link scrollto"><i class="bx bx-chevron-right"></i> <span>Certifications</span></a></li>
+          <li><a href="#education" class="nav-link scrollto"><i class="bx bx-chevron-right"></i> <span>Education</span></a></li>
+
         </ul>
       </nav>
     </div>
@@ -111,10 +113,7 @@
         <div class="section-title">
           <h2>CV</h2>
         </div>
-        <div class="download">
-          <i class="bi bi-file-text"></i>
-          <h4><a href="/Lewis_Evan.pdf">Resume</button></a></h4>
-        </div>
+        
         <div class="row">
           <div class="col-lg-12">
             <h3 class="resume-title">Professional Experience</h3>
@@ -151,33 +150,57 @@
               </ul>
             </div>
           </div>
-          <div>
-            <h3 class="resume-title">Education</h3>
-            <div class="resume-item">
-              <h4>Bachelor of Science with Honor in Computer Science</h4>
-              <h5>2016 - 2020</h5>
-              <p><em>Stevens Institute of Technology, Hoboken, NJ</em></p>
-              <p>GPA: 3.3</p>
-              <p><a href="https://cediploma.stevens.edu/validation/">View diploma</a></p>
-              <p>Credential ID CeDiD: 20BLAQR9EFSY and Name: EV</p>
-            </div>
+        </div>
+      </div>
+      <div class="download"></br></br>
+        <i class="bi bi-file-text"></i>
+        <h4><a href="/Lewis_Evan.pdf">Download Resume</button></a></h4>
+      </div>
+    </section>
+    <section id="certs" class="resume">
+      <div class="container">
+        <div class="section-title">
+          <h2>Certifications</h2>
+        </div>
+        <div>
+          <div class="resume-item">
+            <h4>GIAC Certified Penetration Tester (GPEN)</h4>
+            <h5>2023</h5>
+            <p><em>GIAC</em></p>
+            <p><a href="https://www.credly.com/badges/562a281c-2609-4886-b2f2-fe93066e3f11">View credential</a></p>
+            <p>The GIAC Penetration Tester (GPEN) certification validates a practitioner's ability to properly conduct a penetration test using best-practice techniques and methodologies. GPEN certification holders have the knowledge and skills to conduct exploits, engage in detailed environmental reconnaissance, and utilize a process-oriented approach to penetration testing projects.</a></p>
           </div>
-          <div>
-            <h3 class="resume-title">Certifications</h3>
-            <div class="resume-item">
-              <h4>GIAC Certified Incident Handler (GCIH)</h4>
-              <h5>2022</h5>
-              <p><em>GIAC</em></p>
-              <p><a href="https://www.credly.com/badges/f9034f49-9470-4405-bac0-9ea279e09e92">View credential</a></p>
-              <p>The GIAC Incident Handler (GCIH) certification validates a practitioner's ability to detect, respond, and resolve computer security incidents using a wide range of essential security skills. GCIH certification holders have the knowledge needed to manage security incidents by understanding common attack techniques, vectors and tools, as well as defend against and respond to such attacks when they occur.</a></p>
-            </div>
-            <div class="resume-item">
-              <h4>GIAC Advisory Board Member</h4>
-              <h5>2022</h5>
-              <p><em>GIAC</em></p>
-              <p><a href="https://www.credly.com/badges/e9974fb9-4408-48c6-8e2f-dea32a212437">View credential</a></p>
-              <p>The GIAC Advisory Board is an invitation only, email-based forum where IT Security professionals can exchange ideas and advice. Invitations are extended to GIAC certified professionals who demonstrate exemplary performance on GIAC exams. Members are often consulted as subject-matter experts for content-related issues in various GIAC program needs.</a></p>
-            </div>
+          <div class="resume-item">
+            <h4>GIAC Certified Incident Handler (GCIH)</h4>
+            <h5>2022</h5>
+            <p><em>GIAC</em></p>
+            <p><a href="https://www.credly.com/badges/f9034f49-9470-4405-bac0-9ea279e09e92">View credential</a></p>
+            <p>The GIAC Incident Handler (GCIH) certification validates a practitioner's ability to detect, respond, and resolve computer security incidents using a wide range of essential security skills. GCIH certification holders have the knowledge needed to manage security incidents by understanding common attack techniques, vectors and tools, as well as defend against and respond to such attacks when they occur.</a></p>
+          </div>
+          <div class="resume-item">
+            <h4>GIAC Advisory Board Member</h4>
+            <h5>2022</h5>
+            <p><em>GIAC</em></p>
+            <p><a href="https://www.credly.com/badges/e9974fb9-4408-48c6-8e2f-dea32a212437">View credential</a></p>
+            <p>The GIAC Advisory Board is an invitation only, email-based forum where IT Security professionals can exchange ideas and advice. Invitations are extended to GIAC certified professionals who demonstrate exemplary performance on GIAC exams. Members are often consulted as subject-matter experts for content-related issues in various GIAC program needs.</a></p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="education" class="resume">
+      <div class="container">
+        <div class="section-title">
+          <h2>Certifications</h2>
+        </div>
+        <div>
+          <h3 class="resume-title">Education</h3>
+          <div class="resume-item">
+            <h4>Bachelor of Science with Honor in Computer Science</h4>
+            <h5>2016 - 2020</h5>
+            <p><em>Stevens Institute of Technology, Hoboken, NJ</em></p>
+            <p>GPA: 3.3</p>
+            <p><a href="https://cediploma.stevens.edu/validation/">View diploma</a></p>
+            <p>Credential ID CeDiD: 20BLAQR9EFSY and Name: EV</p>
           </div>
         </div>
       </div>
