hard drive project edits

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <nav id="navbar" class="nav-menu navbar">
         <ul>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-chevron-right"></i> <span>About</span></a></li>
-          <!-- <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-chevron-right"></i> <span></span>Work</span></a></li> -->
+          <li><a href="#projects" class="nav-link scrollto"><i class="bx bx-chevron-right"></i> <span></span>Projects</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-chevron-right"></i> <span>CV</span></a></li>
           <li><a href="#certs" class="nav-link scrollto"><i class="bx bx-chevron-right"></i> <span>Certifications</span></a></li>
           <li><a href="#education" class="nav-link scrollto"><i class="bx bx-chevron-right"></i> <span>Education</span></a></li>
@@ -85,25 +85,19 @@
       </div>
     </section><!-- End About Section -->
     <!-- ======= Portfolio Section ======= -->
-    <!-- <section id="portfolio" class="portfolio section-bg">
+    <section id="projects">
       <div class="container">
 
         <div class="section-title">
-          <h2>Work</h2>
-          <p>I take photos and make things behave badly</p>
+          <h2>Projects</h2>
+          <p></p>
         </div>
         <div class="row" data-aos="fade-up">
-          <h4 class="resume-title">Photos</h3>
-          <a href=""#"">Gallery</a>
-        </div>
-        <div></br></div>
-        <div class="row" data-aos="fade-up">
-          <h4 class="resume-title">Making things behave badly</h3>
-          <a href="/resume.pdf">Resume</a>
+          <h4 class="resume-title"><a href="./projects/hd.html">1990's Hard Drive Revival</a></h4>
         </div>
 
       </div>
-    </section> -->
+    </section>
     <!-- End Portfolio Section -->
 
     <!-- ======= Resume Section ======= -->
@@ -229,6 +223,3 @@
 </body>
 
 </html>
-
-<!--Template Name: iPortfolio
-Template URL: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/-->
