--- a/projects/hd.html
+++ b/projects/hd.html
@@ -38,17 +38,17 @@
     <div class="d-flex flex-column" style="padding: 10%;">
 
       <div class="profile">
-        <h1 class="text-light"><a href="index.html">Evan Lewis</a></h1>
+        <h1 class="text-light"><a href="../index.html">Evan Lewis</a></h1>
         <p style="font-size: 20px;">Application Security Engineer </p>
       </div>
 
       <nav id="navbar" class="nav-menu navbar">
         <ul>
-          <li><a href="#about" class="nav-link scrollto"><i class="bx bx-chevron-right"></i> <span>About</span></a></li>
-          <!-- <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-chevron-right"></i> <span></span>Work</span></a></li> -->
-          <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-chevron-right"></i> <span>CV</span></a></li>
-          <li><a href="#certs" class="nav-link scrollto"><i class="bx bx-chevron-right"></i> <span>Certifications</span></a></li>
-          <li><a href="#education" class="nav-link scrollto"><i class="bx bx-chevron-right"></i> <span>Education</span></a></li>
+          <li><a href="../index.html#about" class="nav-link scrollto"><i class="bx bx-chevron-right"></i> <span>About</span></a></li>
+          <li><a href="../index.html#projects" class="nav-link scrollto"><i class="bx bx-chevron-right"></i> <span></span>Projects</span></a></li>
+          <li><a href="../index.html#resume" class="nav-link scrollto"><i class="bx bx-chevron-right"></i> <span>CV</span></a></li>
+          <li><a href="../index.html#certs" class="nav-link scrollto"><i class="bx bx-chevron-right"></i> <span>Certifications</span></a></li>
+          <li><a href="../index.html#education" class="nav-link scrollto"><i class="bx bx-chevron-right"></i> <span>Education</span></a></li>
 
         </ul>
       </nav>
