--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <body>
   
-  <!-- ======= Header ======= -->`
+  <!-- ======= Header ======= -->
   <header id="header">
     <div class="d-flex flex-column" style="padding: 10%;">
 
@@ -43,7 +43,7 @@
       <nav id="navbar" class="nav-menu navbar">
         <ul>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-chevron-right"></i> <span>About</span></a></li>
-          <li><a href="#projects" class="nav-link scrollto"><i class="bx bx-chevron-right"></i> <span></span>Projects</span></a></li>
+          <li><a href="#projects" class="nav-link scrollto"><i class="bx bx-chevron-right"></i> <span></span>Writings</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-chevron-right"></i> <span>CV</span></a></li>
           <li><a href="#certs" class="nav-link scrollto"><i class="bx bx-chevron-right"></i> <span>Certifications</span></a></li>
           <li><a href="#education" class="nav-link scrollto"><i class="bx bx-chevron-right"></i> <span>Education</span></a></li>
@@ -89,7 +89,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Projects</h2>
+          <h2>Writings</h2>
           <p></p>
         </div>
         <div class="row" data-aos="fade-up">
@@ -112,8 +112,32 @@
           <div class="col-lg-12">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
+              <h4>Application and Cloud Security Manager</h4>
+              <h5>March 2025 - Present</h5>
+              <p><em>Old Republic Title</em></p>
+              <ul>
+                <li>Oversee and coordinate end-to-end application security activities, including threat modeling, secure architecture design reviews, and internal penetration testing across business-critical systems.</li>
+                <li>Lead the planning and execution of external penetration tests and ensure timely remediation across all regulated applications.</li>
+                <li>Establish application and cloud security standards, governance models, and measurable KPIs to continuously mature the organization’s security program.</li>
+                <li>Serve as a primary liaison between security, engineering, compliance, and leadership stakeholders to align risk management strategies with business priorities.</li>
+                <li>Drive secure DevOps practices by scaling automated security controls in CI/CD pipelines and establishing cloud-native security tooling.</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Lead Application Security Engineer</h4>
+              <h5>October 2024 - March 2025</h5>
+              <p><em>Old Republic Title</em></p>
+              <ul>
+                <li>Directed internal penetration testing, manual code reviews, and vulnerability assessments across high-impact applications, identifying and mitigating critical security risks.</li>
+                <li>Provided technical leadership in application threat modeling and design reviews, ensuring alignment with secure architecture principles.</li>
+                <li>Contributed to maturing the organization’s AppSec roadmap by recommending tooling improvements, process enhancements, and training initiatives.</li>
+                <li>Mentored junior engineers and provided expert guidance on secure coding, vulnerability triage, and risk remediation strategies.</li>
+                <li>Launched a Security Champions Program to scale secure development practices by empowering developers with security training, tooling, and ongoing mentorship.</li>
+              </ul>
+            </div>
+            <div class="resume-item">
               <h4>Application Security Engineer</h4>
-              <h5>June 2022 - Present</h5>
+              <h5>June 2022 - October 2024</h5>
               <p><em>Old Republic Title</em></p>
               <ul>
                 <li>Conduct internal penetration testing, vulnerability assessments, and manual code reviews on business-critical company applications</li>
@@ -124,7 +148,7 @@
             </div>
             <div class="resume-item">
               <h4>Application Security Analyst</h4>
-              <h5>December 2021-June 2022</h5>
+              <h5>December 2021 - June 2022</h5>
               <p><em>Old Republic Title</em></p>
               <ul>
                 <li>Determined company needs, demoed, and purchased DAST and SAST scanning solutions</li>
@@ -135,7 +159,7 @@
             </div>
             <div class="resume-item">
               <h4>Software Engineer</h4>
-              <h5>May 2020-December 2021</h5>
+              <h5>May 2020 - December 2021</h5>
               <p><em>Bank of America</em></p>
               <ul>
                 <li>Developed frameworks to generate and validate positions in fixed income trading portfolios valued at over $100 billion</li>
@@ -184,10 +208,9 @@
     <section id="education" class="resume">
       <div class="container">
         <div class="section-title">
-          <h2>Certifications</h2>
+          <h2>Education</h2>
         </div>
         <div>
-          <h3 class="resume-title">Education</h3>
           <div class="resume-item">
             <h4>Bachelor of Science with Honor in Computer Science</h4>
             <h5>2016 - 2020</h5>
